--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h3>Inicio &nbsp; &nbsp; &nbsp; Principal &nbsp; &nbsp; &nbsp; Deportes &nbsp; &nbsp; &nbsp; Ciudad</h3>
     </nav>
     <article>
-      <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</h2>
+      <h2>ESTA ES UN MODIFICACION DE YETZABETH</h2>
       <section>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       </section>
